[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
zmq = "0.10.0"
chashmap = "2.2.2"
crossbeam = "0.8.2"
bytes = "1"
rand = "0.8"
chrono = "0.4.30"

[dependencies.protobuf]
version = "3.2.0"
